--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Directives from '../components/vue/Directives.vue'
+// import Directives from '../components/vue/Directives.vue'
+import TODO from '../components/vue/TODO.vue'
 ---
 
 <Layout title="Welcome to Astro.">
 <!-- Hidratamos con Client -- load para que alimente apenas carge la pagina -->
-<Directives client:load/>
+<!-- <Directives client:load/> -->
+<TODO client:load />
 </Layout>
